# dlwp

./: README.md  pyproject.toml
src/dlwp/: __init__.py  naive.py
