[project]
name = "dlwp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bitmole", email = "robert@idea-loop.com" }
]
dependencies = [
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "dlwp:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dlwp"]
